--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,12 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./static/css/styles.css" />
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
     <title>Control de Ganado</title>
   </head>
   <body>
-    <div id="container"></div>
+    <!-- Para el Header -->
+    <div id="header-container"></div>
+    <!-- Para el contenido de cada página -->
+    <div id="layout-content"></div>
+
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
     <script type="module" src="/static/js/index.js"></script>
   </body>
