--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,6 +16,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
-    <script type="module" src="/static/js/index.js"></script>
+    <script type="module" src="./static/js/index.js"></script>
   </body>
 </html>
