feat: ventana de login

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,6 +9,7 @@
     <title>Control de Ganado</title>
   </head>
   <body>
+    <div id="container"></div>
     <!-- Para el Header -->
     <div id="header-container"></div>
     <!-- Para el contenido de cada página -->
